--- a/gs1AI-rtu/rtu.html
+++ b/gs1AI-rtu/rtu.html
@@ -75,7 +75,7 @@
       }
 
       .back-to-scan {
-        background: rgb(42, 130, 202);
+        background: #fe8e14;
         text-align: center;
         font-size: 24px;
         color: white;
@@ -149,7 +149,21 @@
               showCloseButton: false,
               cameraSwitchControl: "toggleFrontBack",
             },
-            //onInitReady: ()=>{}
+            onInitReady: (components) => {
+              // Do something with the foundational components
+              // Set the scan laser to be visible in cameraView
+              components.cameraView.setScanLaserVisible(true);
+
+              // Set the scan region to a rectangle with percentage values by cameraEnhancer
+              let region = {
+                x: 0,
+                y: 20,
+                width: 100,
+                height: 60,
+                isMeasuredInPercentage: true,
+              };
+              components.cameraEnhancer.setScanRegion(region);
+            },
           });
 
           // Launch the scanner and wait for the result
