--- a/gs1AI-rtu/rtu.html
+++ b/gs1AI-rtu/rtu.html
@@ -15,7 +15,7 @@
         width: 100%;
         height: 100%;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 16px;
+        font-size: 20px;
       }
 
       .loading {
@@ -61,7 +61,6 @@
       }
 
       .goods-name {
-        font-size: 32px;
         font-weight: bolder;
       }
       .id {
@@ -77,7 +76,6 @@
       .back-to-scan {
         background: #fe8e14;
         text-align: center;
-        font-size: 24px;
         color: white;
         border-radius: 6px;
         margin: 12px;
@@ -102,9 +100,7 @@
           <span id="quantity-name">Net Weight (kg)</span>: <span id="quantity-value">x.xx</span> (AI <span id="quantity-AI">000n</span>)
         </div>
       </div>
-      <div class="price">
-        <span id="price-name">Price</span>: <span id="price-value" style="font-size: 24px">xx.x</span> (AI <span id="price-AI">392n</span>)
-      </div>
+      <div class="price"><span id="price-name">Price</span>: <span id="price-value">xx.x</span> (AI <span id="price-AI">392n</span>)</div>
       <button id="back-to-scan" class="back-to-scan">Back to Scan</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.2.2000-beta-202510282254/dist/dbr.bundle.js"></script>
