--- a/gs1AI-rtu/rtu.html
+++ b/gs1AI-rtu/rtu.html
@@ -137,7 +137,7 @@
   </head>
   <body>
     <div id="landing-page" class="landing-page">
-      <div class="landing-title">Read GS1Read a GS1 Application Identifier (AI)</div>
+      <div class="landing-title">Read a GS1 Application Identifier (AI)</div>
       <div id="play-button" class="play-button">
         <div class="play-icon"></div>
       </div>
