better color scheme

--- a/gs1AI-rtu/rtu.html
+++ b/gs1AI-rtu/rtu.html
@@ -141,8 +141,8 @@
         position: absolute;
         width: 70px;
         height: 70px;
-        border: 3px solid rgba(102, 126, 234, 0.3);
-        border-top-color: #667eea;
+        border: 3px solid rgba(254, 142, 20, 0.3);
+        border-top-color: #fe8e14;
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
@@ -150,7 +150,7 @@
       .play-button.disabled::after {
         content: "Loading";
         position: absolute;
-        color: #667eea;
+        color: #fe8e14;
         font-size: 12px;
         font-weight: bold;
         letter-spacing: 0.5px;
@@ -168,7 +168,7 @@
       .play-icon {
         width: 0;
         height: 0;
-        border-left: 24px solid #667eea;
+        border-left: 24px solid #fe8e14;
         border-top: 16px solid transparent;
         border-bottom: 16px solid transparent;
         margin-left: 6px;
