--- a/gs1AI-rtu/rtu.html
+++ b/gs1AI-rtu/rtu.html
@@ -12,6 +12,9 @@
       <div id="play-button" class="play-button disabled">
         <div class="play-icon"></div>
       </div>
+      <a href="https://www.dynamsoft.com/" target="_blank" class="logo">
+        <img src="logo-dynamsoft-blackBg-190x47-DZ66W3xz.png" alt="logo">
+      </a>
     </div>
     <div id="barcode-scanner-view" class="barcode-scanner-view" style="display:none;"></div>
     <div id="result-page" class="result-page" style="display: none">
@@ -20,6 +23,7 @@
       <div class="goods-name" style="display:none;">&lt;Goods Name&gt;</div>
       <div id="gs1AI-info" class="gs1AI-info"></div>
       <button id="back-to-scan" class="back-to-scan">Back to Scan</button>
+      <div class="powered-by-dynamsoft"></div>
     </div>
     <div class="dm-camera-mn-toast"></div>
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.2.2000-beta-202510282254/dist/dbr.bundle.js"></script>
