question=>info, smaller log

--- a/gs1AI-rtu/rtu.html
+++ b/gs1AI-rtu/rtu.html
@@ -217,7 +217,7 @@
             const funcShowDescription = ()=>funcShowToast(fullDescription);
             spName.addEventListener("pointerdown", funcShowDescription);
             spName.addEventListener("pointerover", funcShowDescription);
-            spName.classList.add("has-question");
+            spName.classList.add("has-info");
           }
           div.append(spName);
           div.append(": ");
